css/style.css
/* Global Selectors */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  outline: none;
  user-select: none;
  box-sizing: border-box;
  backface-visibility: hidden;
}

html {
  font-family: 'Roboto', 'Lato', 'Open Sans', Arial, Helvetica, sans-serif;
  line-height: 1;
  font-size: 1rem;
}

body {
  min-width: 320px;
  overflow-x: hidden;
  background-color: transparent;
  color: #fff;
  width: 100%;
}

body.active {
  overflow: hidden;
}

ul {
  list-style-type: none;
}

ul > li {
  display: block;
}

li > a {
  display: block;
  padding: 0 1rem;
}

a {
  text-decoration: none;
  color: inherit;
}

i {
  margin-right: 0.5rem;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

.modal {
  display: flex;
}

.modal-space {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -5;
  height: 100vh;
}

.modal-space__active {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 5;
  height: 100vh;
}

section {
  padding: 4rem;
}

section:nth-child(odd) {
  background-color: #fff;
  color: #000;
}

.top .hamburger-inner,
.top .hamburger-inner::before,
.top .hamburger-inner::after,
.top .hamburger.is-active .hamburger-inner,
.top .hamburger.is-active .hamburger-inner::before,
.top .hamburger.is-active .hamburger-inner::after {
  background-color: white;
}

.hamburger:hover,
.hamburger.is-active:hover {
  opacity: 1;
}

.btn {
  background-color: inherit;
  color: inherit;
  height: 50px;
  width: 100px;
  right: 0;
  bottom: 0;
  border: none;
  transition: 250ms;
  cursor: pointer;
  font-size: 1.5rem;
  border-top-left-radius: 1rem;
  text-transform: uppercase;
  text-align: center;
}

.btn--top {
  background-color: #222;
  color: #fff;
  position: fixed;
  z-index: -5;
  transition: 500ms ease;
  opacity: 0;
}

.btn--top__active {
  background-color: #222;
  color: #fff;
  position: fixed;
  z-index: 5;
  opacity: 1;
}

.btn--top a,
.btn--back span {
  line-height: 50px;
  display: block;
}

.btn--top:hover {
  background-color: #444;
}

.btn--back {
  background-color: #444;
  color: #fff;
  position: fixed;
  z-index: 10;
  transition: 250ms ease-out;
  right: 100%;
}

.btn--back__active {
  right: 0;
}

.btn--back:hover {
  background-color: #666;
}

/* Header-only Selectors */
header {
  background-color: #222;
  position: fixed;
  width: 100%;
  height: 4rem;
  z-index: 10;
  border-bottom: 1px solid #000;
  transition: 250ms ease;
}

header.active {
  background-color: #444;
  position: fixed;
  width: 100%;
  height: 4rem;
  z-index: 10;
  border-bottom: 1px solid #000;
}

.top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;
}

.top--brand {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;
}

.top--brand--icon {
  padding: 3.5px;
}

.top--brand--logo {
  font-size: 2rem;
  padding: 1rem;
}

.top--menu {
  display: none;
}

.top--menu ul {
  font-size: 0;
}

.top--menu li {
  line-height: 4rem;
  transition: 250ms;
}

.top--menu li:hover {
  background-color: #444;
}

.top--menu a {
  display: block;
  font-size: 1rem;
}

/* Main content-specfic Selectors */
.content {
  background-color: #333;
  color: #fff;
}

.content--top {
  height: 100vh;
  /* background: url('../images/image.jpg'); */
  background-color: #fff;
  color: #000;
  background-repeat: no-repeat;
  background-size: cover;
  background-position-x: center;
  position: relative;
  padding: 0;
}

.content--top p,
.content--top ul {
  position: relative;
  top: 50%;
  text-align: center;
}

.content--top ul {
  margin-top: 0.5rem;
}

.content--top li {
  display: inline-block;
  background-color: #333;
  color: #fff;
  border: 1px solid;
  border-radius: 0.5rem;
  transition: 0.25s ease;
}

.content--top li:hover {
  background-color: #555;
  color: #fff;
}

.content--top a {
  display: block;
  padding: 0.5rem;
}

.content--name {
  font-size: 2.5rem;
  font-weight: bold;
}

.content--role {
  margin-top: 0.5rem;
  font-size: 1rem;
  font-weight: bold;
}

.content--title {
  font-weight: bold;
  text-align: center;
  display: block;
  font-weight: 400;
  font-size: 2rem;
  padding-bottom: 0.5rem;
}

.content--about {
  height: 50vh;
}

.content--about p {
  font-size: 1.5rem;
}

.content--skills ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.content--skills li {
  display: flex;
  padding: 1rem;
  align-items: center;
  flex-basis: 240px;
  border: 1px solid black;
  border-radius: 0.5rem;
  margin: 0.5rem;
  transition: 250ms;
}

.content--skills li:hover {
  background-color: #333;
  color: #fff;
}

.content--skills i.fa-check-circle {
  font-size: 2rem;
  color: green;
}

.content--skills span {
  font-size: 1rem;
}

.content--projects--body {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.content--projects--body figure {
  border: 1px solid #000;
  margin: 0.5rem;
  width: 250px;
}

.content--projects--body figcaption {
  padding: 1rem;
  background-color: #fff;
  color: #000;
  min-height: 100px;
}

.content--projects a {
  display: block;
}

.content--contact {
  height: 50vh;
}

/* Sidebar-specfic Selectors */
aside {
  background-color: #222;
  position: fixed;
  top: 4rem;
  left: -100%;
  height: calc(100vh - 4rem);
  width: 100%;
  display: block;
  z-index: 10;
  transition: 250ms ease-out;
}

aside.open {
  left: 0;
}

.sidebar {
  position: relative;
  height: calc(100vh - 4rem);
  overflow-y: visible;
  overflow-x: hidden;
}

.sidebar--menu--title {
  font-weight: normal;
  text-transform: uppercase;
  padding: 1rem 0 1rem 1rem;
  color: #aaa;
}

.sidebar--menu ul {
  border-bottom: 1px solid #000;
}

.sidebar--menu li {
  line-height: 4rem;
  transition: 250ms;
}

.sidebar--menu li:hover {
  background-color: #444;
}

footer.bottom {
  height: 100px;
  background-color: #000;
  display: flex;
}

.bottom--copyright {
  margin: auto;
}

/* Tablet Only */
@media (min-width: 768px) {
  .top--brand {
    justify-content: flex-start;
    width: 240px;
    border-right: 1px solid #000;
  }

  .top--menu {
    display: block;
  }

  .top--menu li {
    display: inline-block;
  }

  .top--menu a {
    display: block;
  }

  aside {
    width: 240px;
    left: -240px;
  }

  .aside.open {
    left: 0;
    width: 240px;
  }

  .btn--back {
    display: none;
  }

  main,
  footer {
    padding-left: 0;
    transition: 250ms ease-out;
  }

  main.active,
  footer.active {
    padding-left: 240px;
  }
}

/* Desktop Only*/
@media (min-width: 1024px) {
}

/* Widescreen-Desktop Only */
@media (min-width: 1216px) {
}

/* Full HD Only */
@media (min-width: 1408px) {
}

